# StatsCalc

./: LICENSE  README.md
StatsCalc/: CMakeLists.txt  StatsCalc  StatsFunctions.cpp  StatsFunctions.h  main.cpp
